--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/elements": "^1.3.31",
+    "@react-navigation/native": "^6.1.18",
     "expo": "~51.0.28",
+    "expo-blur": "~13.0.2",
+    "expo-image-picker": "~15.0.7",
+    "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.14.0",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-gifted-chat": "^2.6.4",
+    "react-native-progress": "^5.0.1",
+    "react-native-reanimated": "3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.7.1",
+    "react-native-video": "^6.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
