--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/app": "^21.0.0",
+    "@react-native-firebase/auth": "^21.0.0",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native": "^6.1.18",
@@ -17,8 +20,10 @@
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.14.0",
+    "firebase": "^10.14.1",
+    "firebase-admin": "^12.6.0",
     "react": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-get-random-values": "^1.11.0",
