--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^21.0.0",
     "@react-native-firebase/auth": "^21.0.0",
     "@react-navigation/drawer": "^6.7.2",
@@ -22,6 +22,7 @@
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
+    "firestore": "^1.1.6",
     "react": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-native": "0.74.5",
