--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native": "^6.1.18",
     "expo": "~51.0.28",
+    "expo-av": "~14.0.7",
     "expo-blur": "~13.0.2",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
