Co-authored-by: adriamariavs <adriamariavs@users.noreply.github.com> Co-authored-by: Ana Oliveira <aniinh4@users.noreply.github.com> Co-authored-by: anajuliif <anajuliif@users.noreply.github.com>

--- a/app.json
+++ b/app.json
@@ -10,9 +10,13 @@
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
+      
     },
     "ios": {
       "supportsTablet": true,
+      "infoPlist": {
+        "UIBackgroundModes": ["audio"]
+    },
       "bundleIdentifier": "com.clubgamingfruv.app" 
     },
     "android": {
@@ -24,6 +28,15 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-av",
+        {
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
+        }
+      ]
+    ]
   }
+  
 }
