--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-firebase/app": "^21.0.0",
     "@react-native-firebase/auth": "^21.0.0",
+    "@react-native-masked-view/masked-view": "0.3.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native": "^6.1.18",
     "expo": "~51.0.28",
     "expo-av": "~14.0.7",
     "expo-blur": "~13.0.2",
+    "expo-checkbox": "~3.0.0",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-symbols": "~0.1.5",
     "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
     "firestore": "^1.1.6",
@@ -30,6 +34,7 @@
     "react-native-gesture-handler": "^2.20.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.6.4",
+    "react-native-pager-view": "6.3.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
